--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ var gameInstance = UnityLoader.instantiate("gameContainer", "Build/0.8_4_3.json"
 <body>
   
   <div class="webgl-content _content">
-    <div id="gameContainer _container" style="width: 960px; height: 600px"></div>
+    <div id="gameContainer"  class = "_container" style="width: 960px; height: 600px"></div>
     
     
     <div class="footer _hide">
