--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ canvas
     display : flex;
     justify-content : center;
     align-items : center;
-
+    background-color : #111; 
 }
 
 ._BOX_0_0_
