--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ canvas
     display : flex;
     justify-content : center;
     align-items : center;
-    background-color : #111; 
+    background-color : #1a1a1a; 
 }
 
 ._BOX_0_0_
@@ -94,13 +94,13 @@ canvas
     background: #333;
 
 
-    box-shadow : 0px 5px 0px 0px #222;
+    box-shadow : 0px 5px 0px 0px #252525;
 }
 
 ._BOX_0_0_:active
 {
     transform : translate(0px , 3px);
-    box-shadow : 0px 2px 0px 0px #222;
+    box-shadow : 0px 2px 0px 0px #252525;
 }
 
 
