--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ body
     
 <meta charset="utf-8">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>TETROD &bull;ver</title>
+<title>TETROD &bull;prev</title>
 
 
 
