--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@ body
 {
 
     padding: 0.7rem;
+    margin-top : 1rem;
+    margin-left : 2rem;
 
     color: #eee;
     /*font-family: monospace;
