--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ the begining of input
 </a>
     
     
-<a class = "_BOX_0_" href = "/0.1">
+<a class = "_BOX_0_" href = "#">
 0.1 
 2021-sept-29
 input_improved
