--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ body
 <body>
   
     
-<a class = "_BOX_0_" href = "/0.0">
+<a class = "_BOX_0_" href = "/WEBGL_CANVAS_0_2_old/0.0">
 0.0 
 2021-sept-29
 the begining of input
