--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ body
 <body>
   
     
-<a class = "_BOX_0_" href = "/WEBGL_CANVAS_0_2_old/0.0" target = "_blank">
+<a class = "_BOX_0_" href = "https://an-alch3mist.github.io/WEBGL_CANVAS_0_2_old/0.0" target = "_blank">
 0.0 <br>
 2021-sept-29 <br>
 the begining of input
